syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Screening.GRPC";

package Screening;

service ScreeningProtoService {
	rpc GetScreening (GetScreeningRequest) returns (GetScreeningResponse);
  rpc DeleteMovie (DeleteMovieRequest) returns (DeleteMovieResponse);
  rpc UpdateMovie (UpdateMovieRequest) returns (UpdateMovieResponse);
  rpc GetCurrentMovies (google.protobuf.Empty) returns (MoviesResponse);
  rpc GetFutureMovies (google.protobuf.Empty) returns (MoviesResponse);
}

message GetScreeningRequest {
  int32 id = 1;
}

message GetScreeningResponse {
  int32 id = 1;
  message Movie {
    int32 id = 1;
	string title = 2;
    int32 length = 3;
  }                
  Movie movie = 2;
  google.protobuf.Timestamp movieStart = 3;
  int32 hallId = 4;
}

message DeleteMovieRequest {
  int32 id = 1;
}

message DeleteMovieResponse {
  bool success = 1;
}

message UpdateMovieRequest {
  int32 id = 1;
  string title = 2;
  int32 length = 3;
}

message UpdateMovieResponse {
  bool success = 1;
}

message MoviesResponse {
  repeated int32 movies = 1;
}